@@ -19,4 +19,5 @@ Add new trait: Slow Worker
 Add Sandbox Option for Slow Worker
 Quick and Slow worker now take special consideration for Slow or Fast readers.
 Increase Hardy regeneration strength. (it got nerfed too hard)
-Gymgoer removed Exercise Fatigue.
+Gymgoer removes Exercise Fatigue.
+Don't trigger Butterfingers if player has nothing in their hands.
